# llm-demo

./: pyproject.toml
.github/workflows/: ci.yml
app/: llm_client.py  main.py
tests/: test_llm_client.py
